force-app/main/default/objects/geopointe__GP_Route_Plan__c/geopointe__GP_Route_Plan__c.object-meta.xml
<CustomObject>
    <label>Geopointe Route Plan</label>
    <nameField>
        <displayFormat>RP-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Route Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>