force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Create_Routes__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Create_Routes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Geopointe Routes</label>
    <type>Checkbox</type>
</CustomField>