force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Different_Start_Locations__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Different_Start_Locations__c</fullName>
    <label>Different Start Locations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>