force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__End_Location__c.field-meta.xml
<CustomField>
    <fullName>geopointe__End_Location__c</fullName>
    <label>End Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>