force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Job_First_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Job_First_Date__c</fullName>
    <inlineHelpText>This field should not be modified by users.</inlineHelpText>
    <label>Job First Date</label>
    <type>Date</type>
</CustomField>