force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Job_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Job_Started_Date__c</fullName>
    <inlineHelpText>This field should not be modified by users.</inlineHelpText>
    <label>Job Started Date</label>
    <type>DateTime</type>
</CustomField>