force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Job_Status__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Job_Status__c</fullName>
    <inlineHelpText>This field should not be modified by users.</inlineHelpText>
    <label>Job Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>