force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Job_Summary__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Job_Summary__c</fullName>
    <inlineHelpText>This field should not be modified by users.</inlineHelpText>
    <label>Job Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>