force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Last_Run_Date__c</fullName>
    <inlineHelpText>When the plan was last run. This field should not be modified by users.</inlineHelpText>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>