force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Pending_Delete__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Pending_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Delete</label>
    <type>Checkbox</type>
</CustomField>