force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Records_With_Incorrect_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Records_With_Incorrect_Business_Hours__c</fullName>
    <label>Records With Incorrect Business Hours</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>