force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Records_With_Incorrect_Hours__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Records_With_Incorrect_Hours__c</fullName>
    <label>Records With Incorrect Business Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>