force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Route_Plan_Configuration__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Route_Plan_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geopointe Route Plan Configuration</label>
    <referenceTo>geopointe__GP_Route_Plan_Configuration__c</referenceTo>
    <relationshipName>Route_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>