force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Route_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Route_Plan_Name__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.Name &amp; &apos; - &apos; &amp; Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Plan Name</label>
    <type>Text</type>
</CustomField>