force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Business_End_Of_Lunch__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Business_End_Of_Lunch__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__End_Of_Lunch__c</formula>
    <label>Business Lunch End Time</label>
    <type>Text</type>
</CustomField>