force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Completed_Child_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Completed_Child_Relationship_Name__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Completed_Child_Relationship_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Child Relationship Name</label>
    <type>Text</type>
</CustomField>