force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Completed_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Completed_Filter_Logic__c</fullName>
    <description>Stores the AND/OR filter logic for queries, eg: 1 AND (2 OR 3)</description>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Completed_Filter_Logic__c</formula>
    <label>Completed Filter Logic</label>
    <type>Text</type>
</CustomField>