force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Completed_Who_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Completed_Who_Field__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Completed_Who_Field__c</formula>
    <inlineHelpText>Name of lookup field to who visited the location</inlineHelpText>
    <label>Completed Who Field</label>
    <type>Text</type>
</CustomField>