force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Create_Routes__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Create_Routes__c</fullName>
    <formula>TEXT(geopointe__Route_Plan_Configuration__r.geopointe__Create_Routes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Geopointe Routes</label>
    <type>Text</type>
</CustomField>