force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Freq_Num_Time_Units__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Freq_Num_Time_Units__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Freq_Num_Time_Units__c</formula>
    <label>Target Frequency - # Time Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>