force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Freq_Num_Visits_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Freq_Num_Visits_Field__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Freq_Num_Visits_Field__c</formula>
    <inlineHelpText>Field used to override the number of visits per period.</inlineHelpText>
    <label>Target Frequency Visits Field</label>
    <type>Text</type>
</CustomField>