force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Freq_Time_Unit__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Freq_Time_Unit__c</fullName>
    <formula>TEXT( geopointe__Route_Plan_Configuration__r.geopointe__Freq_Time_Unit__c )</formula>
    <label>Target Frequency - Time Unit</label>
    <type>Text</type>
</CustomField>