force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Include_Poor_Quality_Geocodes__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Include_Poor_Quality_Geocodes__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Include_Poor_Quality_Geocodes__c</formula>
    <label>Include Poor Quality Geocodes</label>
    <type>Checkbox</type>
</CustomField>