force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Location_Filters__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Location_Filters__c</fullName>
    <description>Holds configuration for filters for Data Sets.</description>
    <label>Location Filters</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>