force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Map_Object__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Map_Object__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Map_Object__c</formula>
    <inlineHelpText>The API name of the map object this Route Plan uses.</inlineHelpText>
    <label>Map Object</label>
    <type>Text</type>
</CustomField>