force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Map_Object_User_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Map_Object_User_Field__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Map_Object_User_Field__c</formula>
    <inlineHelpText>The API name of the map object User Field this Route Plan uses.</inlineHelpText>
    <label>Map Object User Field</label>
    <type>Text</type>
</CustomField>