force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Scheduled_Additional_Fields__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Scheduled_Additional_Fields__c</fullName>
    <inlineHelpText>Additional fields to set and their values</inlineHelpText>
    <label>Scheduled Additional Fields</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>