force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Scheduled_End_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Scheduled_End_Field__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_End_Field__c</formula>
    <inlineHelpText>Name of datetime field in which to save the visit end time</inlineHelpText>
    <label>Scheduled End Field</label>
    <type>Text</type>
</CustomField>