force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Scheduled_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Scheduled_Name__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_Name__c</formula>
    <inlineHelpText>What to name the scheduled visit records</inlineHelpText>
    <label>Scheduled Name</label>
    <type>Text</type>
</CustomField>