force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Scheduled_Route_Plan_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Scheduled_Route_Plan_Field__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_Route_Plan_Field__c</formula>
    <inlineHelpText>Name of Route Plan lookup field</inlineHelpText>
    <label>Scheduled Route Plan Field</label>
    <type>Text</type>
</CustomField>