force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Scheduled_Start_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Scheduled_Start_Field__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_Start_Field__c</formula>
    <inlineHelpText>Name of datetime field in which to save the visit start time</inlineHelpText>
    <label>Scheduled Start Field</label>
    <type>Text</type>
</CustomField>