force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Scheduled_When_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Scheduled_When_Field__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_When_Field__c</formula>
    <inlineHelpText>Name of date field in which to save the date of the visit</inlineHelpText>
    <label>Scheduled When Field</label>
    <type>Text</type>
</CustomField>