force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Scheduled_Who_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Scheduled_Who_Field__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_Who_Field__c</formula>
    <inlineHelpText>Name of User lookup field in which to save who is doing the visit</inlineHelpText>
    <label>Scheduled Who Field</label>
    <type>Text</type>
</CustomField>