force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Start_Date__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Start_Date__c</formula>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>