force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Start_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Start_Of_Day__c</fullName>
    <label>Business Open Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>