force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Status__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Status__c</fullName>
    <formula>TEXT(geopointe__Route_Plan_Configuration__r.geopointe__Status__c)</formula>
    <label>Plan Status</label>
    <type>Text</type>
</CustomField>