force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Use_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Use_Business_Hours__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Use_Location_Visit_Hours__c</formula>
    <label>Use Location Visit Hours</label>
    <type>Checkbox</type>
</CustomField>