force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Visit_Buffer__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Visit_Buffer__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Visit_Buffer__c</formula>
    <label>Visit Buffer (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>