force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Visit_Duration_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Visit_Duration_Field__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Visit_Duration_Field__c</formula>
    <inlineHelpText>Name of field to use to override Visit Duration</inlineHelpText>
    <label>Visit Duration Field</label>
    <type>Text</type>
</CustomField>