force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__RPC_Visiting_Hours__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Visiting_Hours__c</fullName>
    <formula>geopointe__Route_Plan_Configuration__r.geopointe__Visiting_Hours__c</formula>
    <inlineHelpText>Defines the days and hours during which visits can be made. Use JSON and 24-hour format: {&quot;Mon&quot;:(&quot;08:00&quot;,&quot;17:30&quot;),&quot;Tue&quot;:(&quot;07:30&quot;,&quot;13:00&quot;)}</inlineHelpText>
    <label>Visiting Hours</label>
    <type>Text</type>
</CustomField>