force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Start_Address__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Start_Address__c</fullName>
    <label>Start Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>