force-app/main/default/objects/geopointe__GP_Route_Plan__c/fields/geopointe__Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Work_Hours__c</fullName>
    <inlineHelpText>Defines the working days and hours. Use JSON and 24-hour format: {&quot;Mon&quot;:(&quot;08:00&quot;,&quot;17:30&quot;),&quot;Tue&quot;:(&quot;07:30&quot;,&quot;13:00&quot;)}</inlineHelpText>
    <label>Work Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>