force-app/main/default/objects/geopointe__GP_Route_Plan__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Route_Plan_Name__c</columns>
    <columns>geopointe__Start_Address__c</columns>
    <columns>geopointe__End_Address__c</columns>
    <columns>geopointe__RPC_Start_Date__c</columns>
    <columns>geopointe__RPC_End_Date__c</columns>
    <columns>geopointe__RPC_Status__c</columns>
    <columns>geopointe__Last_Run_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>